<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/home_head_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="2dp" >

        <Button
            android:id="@+id/dxs_btn_base_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/top_right_btn"
            android:text="@string/exit"
            android:textColor="@color/white" >
        </Button>

        <TextView
            android:id="@+id/dxs_tv_base_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:gravity="center_horizontal"
            android:text="@string/display_grid_view_info"
            android:textColor="@android:color/white"
            android:textSize="20sp" >
        </TextView>

        <Button
            android:id="@+id/dxs_btn_base_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/top_right_btn"
            android:text="@string/update"
            android:textColor="@color/white" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dxs_ll_base_body"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>